adding a metric endpoint
